<resources>
    <string name="app_name">jogo</string>
    <string name="texto_config">Config</string>
    <string name="texto_entrar">Entrar</string>
    <string name="texto_cadastrar">Cadastrar</string>
    <string name="texto_versao">Info - Versão</string>
    <string name="texto_login">Login</string>
    <string name="texto_senha">Senha</string>
    <string name="texto_avancar">Avançar</string>
    <string name="texto_voltar">Voltar</string>
    <string name="texto_nome">Nome</string>
    <string name="texto_editar">Editar</string>
    <string name="texto_apelido">Apelido</string>
    <string name="texto_sair">Sair</string>
    <string name="texto_pontos">Pontos</string>
    <string name="texto_criaturas_capturadas">Criaturas Capturadas</string>
    <string name="texto_ver">Ver</string>
    <string name="texto_criatura_x">Criatura X</string>
    <string name="texto_itens">Itens</string>
    <string name="texto_quant">Quant</string>
    <string name="texto_mundo">Mundo</string>
    <string name="texto_usar_item">Usar Item</string>
    <string name="texto_nome_criatura">Nome Criatura</string>
    <string name="texto_ataque">ATAQUE</string>
    <string name="texto_defesa">DEFESA</string>
    <string name="texto_velocidade">VELOCIDADE</string>
    <string name="texto_vida">VIDA</string>
    <string name="cadastrar_jogador">Cadastrar Jogador</string>
    <string name="texto_email">E-mail</string>
    <string name="texto_confirmar">Confirmar Senha</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="texto_nome_jogador">Nome do Jogador</string>
    <string name="texto_subtitulo1">Escolha uma Criatura</string>
    <string name="texto_criatura1">Criatura 1</string>
    <string name="texto_botao_selecionar">Selecionar</string>
    <string name="texto_criatura2">Criatura 2</string>
    <string name="texto_criatura3">Criatura 3</string>
    <string name="texto_escolha_itens">Escolha seus Itens</string>
    <string name="texto_item1">Item 1</string>
    <string name="texto_item2">Item 2</string>
    <string name="texto_item3">Item 3</string>
    <string name="texto_item4">Item 4</string>
    <string name="texto_item5">Item 5</string>
    <string name="texto_escolha_cla">Escolha seu Clã</string>
    <string name="texto_cla1">Clã 1</string>
    <string name="texto_cla2">Clã 2</string>
    <string name="texto_cla3">Clã 3</string>
    <string name="texto_cla4">Clã 4</string>
    <string name="excluir">Excluir</string>
    <string name="ver_criaturas">Ver Criaturas</string>

</resources>