<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/cor_input"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:columnCount="2">

                <TextView
                    android:id="@+id/visaogeralNomeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_nome"
                    android:textSize="@dimen/tamanho_texto" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/texto_editar" />

                <TextView
                    android:id="@+id/visaogeralApelidoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/texto_apelido"
                    android:textSize="@dimen/tamanho_texto" />

                <Button
                    android:id="@+id/sairToEntrarId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/texto_sair" />

                <TextView
                    android:id="@+id/visaogeralPontos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_pontos"
                    android:textSize="@dimen/tamanho_texto" />
            </GridLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_botao"
                android:text="@string/texto_criaturas_capturadas"
                android:textSize="@dimen/tamanho_texto" />

            <GridLayout
                android:id="@+id/gridCriaturasFixasId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:columnCount="2"
                android:visibility="gone">

                <TextView
                    android:id="@+id/criatura1Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_criatura_x"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/tamanho_texto" />

                <Button
                    android:id="@+id/botaoCriatura1Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/texto_ver" />

                <TextView
                    android:id="@+id/criatura2Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_criatura_x"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/tamanho_texto" />

                <Button
                    android:id="@+id/botaoCriatura2Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/texto_ver" />

                <TextView
                    android:id="@+id/criatura3Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_criatura_x"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/tamanho_texto" />

                <Button
                    android:id="@+id/botaoCriatura3Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/texto_ver" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listaDinamicaId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_botao"
                android:text="@string/texto_itens"
                android:textSize="@dimen/tamanho_texto" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:columnCount="2">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/texto_nome"
                    android:textSize="@dimen/tamanho_texto"
                    tools:text="@string/texto_nome" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/texto_quant"
                    android:textSize="@dimen/tamanho_texto" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tamanho_texto" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textSize="@dimen/tamanho_texto" />

            </GridLayout>
        </LinearLayout>

        <Button
            android:id="@+id/verCriaturasId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_criaturas"
            android:visibility="gone" />

        <Button
            android:id="@+id/botaoMundoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_mundo" />
    </LinearLayout>
</ScrollView>